Increased test coverage and fixed code smells